--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,11 +10,28 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@next/env": "^15.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-slot": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.0",
+    "@types/dotenv": "^6.1.1",
+    "@types/jwt-decode": "^2.2.1",
+    "@types/next-auth": "^3.13.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.474.0",
     "next": "15.1.6",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.6.1",
+    "yup-password": "^0.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
