--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,12 +27,15 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "pg": "^8.13.3",
     "prisma": "^6.2.1",
     "streamifier": "^0.1.1",
-    "ts-randomstring": "^1.0.8"
+    "ts-randomstring": "^1.0.8",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@types/multer": "^1.4.12",
-    "@types/nodemailer": "^6.4.17"
+    "@types/nodemailer": "^6.4.17",
+    "typescript": "^5.7.3"
   }
 }
